<resources>
    <string name="app_name">OmegaTracker</string>
    //Login
    <string name="label_hello">Hello from Omega Tracker!</string>
    <string name="label_login">Login</string>
    <string name="label_token">Token</string>
    <string name="label_welcome">Welcome\u0020</string>
    <string name="label_invalid_token">Invalid token</string>
    //Home
    <string name="label_today">Today</string>
    <string name="label_see_all">See all</string>
    <string name="label_time_zero">00:00:00</string>
    <string name="label_name">name</string>
    <string name="label_task">Task</string>
    <string name="label_logout">Logout</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Start</string>
    <string name="label_time">00:32:10</string>
    <string name="label_done">Done</string>

    <string name="label_time_duration">Time\nDuration</string>
    <string name="label_task_completed">Task\nCompleted!</string>
    <string name="label_day">Day</string>
    <string name="label_week">Week</string>
    <array name="titles_appointments">
        <item>@string/label_day</item>
        <item>@string/label_week</item>
    </array>

    <string name="message_coming_soon">Coming soon!</string>

    <string name="action_task_list">Task list</string>
    <string name="action_new_issues">New issues</string>
    <string name="action_report">Report</string>

</resources>