<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_light"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:padding="@dimen/standard_padding"
        android:src="@drawable/logo_black" />

    <TextView
        android:id="@+id/text_login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_padding"
        android:fontFamily="@font/rubik_semibold"
        android:gravity="center|center_horizontal|fill_horizontal"
        android:text="@string/label_hello"
        android:textColor="@color/gray"
        android:textSize="@dimen/title_text_size" />

    <EditText
        android:id="@+id/input_login_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_round_corner"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/label_token"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="15dp"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button_login_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/double_padding"
        android:background="@drawable/selector_round_corner"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/label_login"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark" />

</LinearLayout>